# nordic_cli

./: .gitignore  Dockerfile  LICENCE.md  README.md  pyproject.toml
mcr/: Dockerfile
nordic/: __init__.py  nordic.ctf
nordic/mrt/: __init__.py
nordic/scripts/: nordic.py
